styles/base.css
:root {
    --green-color: #5A7D7C;
    --dark-grey-color: #232C33;
    --light-green-color: #e6f5f1;
    --blue-color: #A0C1D1;
    --light-blue-color: #ebf8ff;
    --heading-font: "Bree Serif", "Times New Roman", serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Outfit", Helvetica, sans-serif;
    max-width: 1000px;
    display: block;
    margin: auto;
}

h1, h2, h3 {
    font-family: var(--heading-font);
    font-weight: 500;
}

h1 {
    background: var(--light-blue-color)
}

header {
    background: var(--blue-color);
}

header p{
    padding: 2rem;
    text-align: center;

}
#course-title {
    display: block;
    margin: 0 auto;
    font-size: 2rem;
    font-family: var(--heading-font);
    padding: 1rem;
    text-align: center;
}

nav {
    background: var(--dark-grey-color);
    margin: 0 auto;
    color:#fff;
}

nav ul {
    display: flex;
    list-style: none;
    flex-wrap: wrap;
}

nav ul li {
    flex: 1 0 auto;
}

nav a {
    display: block;
    color: #fff;
    text-decoration: none;
    text-align: center;
    padding: 1rem;
}

nav a:hover {
    text-decoration: underline;
}

main {
    display: grid;
    grid-template-columns: 2fr 1fr;
}

main h1 {
    grid-column: 1/4;
    text-align: center;
    padding: 1rem;
}

.card {
    height: 100%;
    background: var(--light-green-color);
    
}

.about {
    display: grid;
    grid-template: auto 1fr auto / 1.5fr 1fr;
    place-items: center;

}

.location {
    display: grid;
    grid-template: auto 1fr auto / 1fr 1fr;
    place-items: center;

}

.card h2 {
    grid-column: 1/3;
    text-align: center;
    background: var(--green-color);
    padding: .5rem;
    color: #fff;
    width: 100%;
}

.card h3 {
    grid-column: 1/3;
    text-align: center;
    padding: .5rem;
    border-bottom: 1px solid #000;
    margin: .5rem;
}

.profile {
    width: 180px;
    border-radius: 50%;
    margin: 1rem;
    border: 10px solid var(--blue-color);
}

.about p, figure {
    padding: 1rem 1rem 1rem 2rem;
}

.flag {
    width: 300px;

}

.location p {
    padding: 1rem 2rem 1rem 1rem;
}

figcaption {
    font-style: italic;
}

.resources h2 {
    background: var(--dark-grey-color);
    color: #fff;
}

.resources {
    background: var(--light-blue-color);
}

.resources ul {
    list-style: none;
    padding: 1rem;
}

.resources a, .location a {
    color: #000;
}

.resources a:hover, .location a:hover {
    color: var(--green-color);
}

footer {
    background: var(--blue-color);
    padding: 2rem;
    text-align: center;
}

